--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,107 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% provide(:title, "Home") %>
+<section id="homearea" class="screener padder">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4 col-sm-6 mx-auto">
+        <h1 style="text-align: center;">Hello, I'm</h1>
+        <br>
+        <button class="btn" style="display:block; margin:auto; background:#212529;"><h1 style="color:#ADD9FE;">Aidan Low</h1></button>
+        <br>
+        <p class="lead" style="text-align:center;">and I like to code and eat Milanos.</p>
+        <p style="font-size: 4rem; text-align: center;">
+          <a href="ALowResume11-17.docx" class="boxlink" style="font-size: 3.4rem;"><i class="fa fa-file-text iconlink" aria-hidden="true"></i></a>
+          <a href="http://www.facebook.com/Aidan.M.Low" class="boxlink"><i class="fa fa-facebook iconlink"></i></a>
+          <a href="http://www.linkedin.com/ALowVerus" class="boxlink"><i class="fa fa-linkedin iconlink"></i></a>
+          <a href="http://www.github.com/ALowVerus" class="boxlink"><i class="fa fa-github-square iconlink"></i></a>
+        </p>
+      </div>
+      <div class="col-lg-4 col-sm-6 hidden-xs-down mx-auto">
+        <img src="<% image_path("art/MeInPSOutline.png") %>" class="homeareapic">
+        +
+        <% image_tag("/assets/art/MeInPSOutline.png", :class => "homeareapic") %>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- About Me -->
+<section id="aboutme" class="screener padder">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-sm-12 mx-auto">
+        <h2>About Me</h2>
+        <p class="lead">I'm a Dartmouth engineering student, a George Washington University graduate, and an Mint Milano addict.</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-8 col-sm-12 mx-auto">
+        <div class="row">
+          <div class="col-lg-6">
+            <p class="lead">I want to work at the DALI Lab to develop my coding and design skills. Coding - writing words and seeing stuff appear - is the closest thing I've found to doing magic. I look forward to working with aspiring magicians like myself.</p>
+          </div>
+          <div class="col-lg-6">
+            <h4>Facts:</h4>
+            <ul class="lead">
+              <li>I once ate three Chipotle burritos in one sitting.</li>
+              <li>I can code in HTML, CSS, JS, and Python.</li>
+              <li>I can start a fire using only an orange.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-8 col-sm-12 mx-auto" style="margin-top:10px;">
+        <h3>Web Design</h3>
+        <p>I've worked on websites for:</p>
+        <div class="row">
+          <div class="col-lg-6 col-md-4 mx-auto">
+            <ul>
+              <li><a href="http://ndupress.ndu.edu">National Defense University Press</a></li>
+              <li><a href="http://www.ger.co">GER.co</a></li>
+              <li><a href="http://www/makeroots.world">MakeRoots</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-6 col-md-4 mx-auto">
+            <ul>
+              <li><a href="http://www.ecappeal.org">Ethiopian Food Appeal</a></li>
+              <li><a href="http://www.dartmouthpolitics.com">Dartmouth Political Times</a></li> 
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Art -->
+<section id="art" class="bg-light screener">
+    <div class="container artcontainer">
+      <div class="row">
+        <div class="col-lg-8 col-sm-12 mx-auto padder">
+          <div class="gal">
+            <% image_tag "/assets/art/LowPolyLand.png" %>
+            <% image_tag "/assets/art/GrenadiersExp.jpg" %>
+            <% image_tag "/assets/art/Kushano.jpg" %>
+            <% image_tag "/assets/art/OrisasStand1.png" %>
+            <% image_tag "/assets/art/ParticleCity.png" %>
+            <% image_tag "/assets/art/Ragnar.png" %>
+            <% image_tag "/assets/art/Wombat.jpg" %>
+            <% image_tag "/assets/art/ScaryMan.jpg" %>
+          </div>
+        </div>
+      </div>
+    </div>
+  <div id="overlay">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 mx-auto padder">
+          <br><br><br><br><br>
+          <h2>I do some art.</h2>
+          <p class="lead"><b>I've worked with Blender, Photoshop, DAZ, Maya, and watercolors.</b></p>
+          <button class ="btn btn-info" onclick="off()">Look at the pretty pictures!</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
