--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,98 @@
 // Place all the styles related to the static_pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// add more css stuff here
+
+body {
+  padding-top: 50px;
+}
+
+.content {
+  padding: 40px 15px;
+}
+
+.footer {
+  margin-top: 50px;
+  width: 100%;
+  line-height: 60px; /* Vertically center the text there */
+  padding: 20px;
+  background-color: #f5f5f5;
+}
+
+.memberpic {
+	width: 100%;
+	height: 15vw;
+	object-fit: cover;
+}
+
+
+/* Section maintenance */
+.padder {
+  padding: 20vh 0;
+}
+
+.screener {
+  height: 100vh;
+}
+
+/* Navbar */
+.navbar-nav {
+    float:none;
+    margin:0 auto;
+    display: block;
+    text-align: center;
+}
+.navbar-nav > li {
+    display: inline-block;
+    float:none;
+}
+
+/* Home Area */
+#homearea {
+  background: #ADD9FE;
+}
+
+.iconlink {
+  color: #212529;
+}
+.homeareapic {
+  height: 75vh;
+  float: right;
+  position: relative;
+}
+
+.boxlink {
+  vertical-align: middle;
+}
+
+/* Art */
+#overlay {
+  position: relative;
+  width: inherit;
+  height: inherit;
+  background-color: rgba(230, 230, 230, 0.8);
+  z-index: 2; 
+  cursor: pointer;
+}
+.artcontainer {
+  position: absolute;
+  top: 200vh;
+  left: 75px;
+  right: 75px;
+}
+
+/*GAL*/
+.gal {
+  -webkit-column-count: 3; /* Chrome, Safari, Opera */
+  -moz-column-count: 3; /* Firefox */
+  column-count: 3;
+} 
+.gal img{ width: 100%; padding: 7px 0;}
+@media (max-width: 500px) {
+  .gal {
+    -webkit-column-count: 1; /* Chrome, Safari, Opera */
+    -moz-column-count: 1; /* Firefox */
+    column-count: 1;
+  }
+}
