--- a/app/views/static_pages/dalimembers.html.erb
+++ b/app/views/static_pages/dalimembers.html.erb
@@ -3,41 +3,41 @@
 	<h1>Members of the DALI Lab</h1>
 	<div class="row">
 	<% require 'open-uri' %>
-	<% parsed_json = JSON.parse(JSON.load(open("mappy.dali.dartmouth.edu/members.json"))) %>
-	<% parsed_json["member"].each do |name, iconUrl, url, message, lat_long, terms_on, project| %>
+	<% parsed_json = JSON.parse(open("http://mappy.dali.dartmouth.edu/members.json").read) %>
+	<% int = 1 %>
+	<% parsed_json.each do |member| %>
 		<div class="col-md-3 mx-auto">
-			<img src="http://mappy.dali.dartmouth.edu/{{ member.iconUrl }}" class="memberpic">
+			<img src="http://mappy.dali.dartmouth.edu/<%= member['iconUrl'] %>" class="memberpic">
+			
 			<h1>
-				{{ member.name }}  
-				{% assign lat = member.lat_long[0] | downcase %}
-				{% assign long = member.lat_long[1] | downcase %}
-				<a href="https://www.google.com/maps/@{{ lat }},{{ long }},18z"> 
+				<%= member['name'] %>
+				<% lat = member['lat_long'][0] %>
+				<% long = member['lat_long'][1] %>
+				<a href="https://www.google.com/maps/@<%= lat %>,<%= long %>,18z"> 
 					<i class="fas fa-map-marker-alt"></i>
 				</a>
-				{% if member.url != "" %}
-					{% if member.url | 0, 1 == "//" %}
-					<a href="http://{{ member.url | 2,-1 }}">
-					{% else %}
-					<a href="{{ member.url }}">
-					{% endif %}
+				<% if member['url'] != "" %>
+					<% if member['url'][0, 1] == "//" %>
+					<a href="http://<%= member['url'][2,-1] %>">
+					<% else %>
+					<a href="<%= member['url'] %>">
+					<% end %>
 						<i class="fas fa-desktop"></i>
 					</a>
-				{% endif %}
+				<% end %>
 			</h1>
-			<h2>
-				{% for term in member.terms_on %}
-					{{ term }} 
-				{% endfor %}
-				{% if member.project != [] %}
-					{% for item in member.project %}
-						- {{ item }}
-					{% endfor %}
-				{% endif %}
-			</h2>
-			<p>{{ member.message }}</p>
-			<p>
-				
-			</p>
+			<!-- <h2>
+				<% for term in member['terms_on'] %>
+					<% term %> 
+				<% end %>
+				<% if member['project'] != [] %>
+					<% for item in member['project'] %>
+						- <%= item %>
+					<% end %>
+				<% end %>
+			</h2> -->
+			
+			<p><%= member['message'] %></p>
 		</div>
 	<% end %>
 	</div>
