--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -4,14 +4,6 @@
 
 // add more css stuff here
 
-body {
-  padding-top: 50px;
-}
-
-.content {
-  padding: 40px 15px;
-}
-
 .footer {
   margin-top: 50px;
   width: 100%;
@@ -19,40 +11,29 @@ body {
   padding: 20px;
   background-color: #f5f5f5;
 }
-
 .memberpic {
 	width: 100%;
 	height: 15vw;
 	object-fit: cover;
 }
 
-
 /* Section maintenance */
-.padder {
-  padding: 20vh 0;
-}
 
-.screener {
+.full-page-parent {
   height: 100vh;
+  position: relative;
 }
-
-/* Navbar */
-.navbar-nav {
-    float:none;
-    margin:0 auto;
-    display: block;
-    text-align: center;
-}
-.navbar-nav > li {
-    display: inline-block;
-    float:none;
+.full-page-child {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 /* Home Area */
 #homearea {
   background: #ADD9FE;
 }
-
 .iconlink {
   color: #212529;
 }
@@ -61,7 +42,6 @@ body {
   float: right;
   position: relative;
 }
-
 .boxlink {
   vertical-align: middle;
 }
