--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,21 +1,27 @@
-<nav class="navbar navbar-light fixed-top navbar-expand-lg bg-light">
-    <div class="container">
-        <%= link_to "Lowboy.me", root_path, { :class=>"navbar-brand" } %>
-        
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNavbar" aria-controls="mainNavbar"
-        aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="mainNavbar">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item<% if :title == "Home" %> active<% end %>">
-                    <%= link_to "Home", home_path, { :class=>"nav-link" } %>
-                </li>
-                <li class="nav-item<% if :title == "Members" %> active<% end %>">
-                    <%= link_to "DALI Members", dalimembers_path, { :class=>"nav-link" } %>
-                </li>
-            </ul>
-        </div>
+<!--
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item<% if :title == "Home" %> active<% end %>">
+                <%= link_to "Home", home_path, { :class=>"nav-link" } %>
+            </li>
+            <li class="nav-item<% if :title == "Members" %> active<% end %>">
+                <%= link_to "DALI Members", dalimembers_path, { :class=>"nav-link" } %>
+            </li>
+        </ul>
     </div>
+</nav>
+-->
+
+<nav class="navbar navbar-default" style="margin-bottom: 0px;">
+  <div class="container-fluid">
+    <ul class="nav navbar-nav">
+      <li class="nav-item<% if :title == "Home" %> active<% end %>">
+        <%= link_to "Home", home_path, { :class=>"nav-link" } %>
+      </li>
+      <li class="nav-item<% if :title == "Members" %> active<% end %>">
+        <%= link_to "DALI Members", dalimembers_path, { :class=>"nav-link" } %>
+      </li>
+    </ul>
+  </div>
 </nav>
