--- a/app/views/static_pages/dalimembers.html.erb
+++ b/app/views/static_pages/dalimembers.html.erb
@@ -35,7 +35,7 @@
 		<% if int % num == 0 %>
 			<div class="row">
 		<% end %>
-		<div class="col-md-<%= 12 / num %>">
+		<div class="col-md-<%= 12 / num %> col-sm-4 col-xs-6">
 			<img src="http://mappy.dali.dartmouth.edu/<%= member['iconUrl'] %>" class="memberpic">
 			<h1>
 				<%= member['name'] %>
