you know what, it isn't pretty, but it works. Submitting.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,5 +22,10 @@
   <body>
     <%= render 'layouts/navbar' %>
     <%= yield %>
+    <footer class="py-5 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">Scroll back up, friendo. </p>
+      </div>
+    </footer>
   </body>
 </html>
