--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -15,10 +15,8 @@
           <a href="http://www.github.com/ALowVerus" class="boxlink"><i class="fab fa-github-square iconlink"></i></a>
         </p>
       </div>
-      <div class="col-lg-4 col-sm-6 hidden-xs-down mx-auto">
-        <img src="<% image_path("art/MeInPSOutline.png") %>" class="homeareapic">
-        +
-        <% image_tag("/assets/art/MeInPSOutline.png", :class => "homeareapic") %>
+      <div class="col-lg-8 col-sm-6 hidden-xs-down mx-auto">
+        <img src="http://lowboy.me/Pics/MeInPSOutline.png" class="homeareapic">
       </div>
     </div>
   </div>
@@ -69,36 +67,6 @@
             </ul>
           </div>
         </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- Art -->
-<section id="art" class="bg-light full-page-parent">
-  <div class="container artcontainer full-page-child">
-    <div class="row">
-      <div class="col-lg-8 col-sm-12 mx-auto padder">
-        <div class="gal">
-          <% image_tag "/assets/art/LowPolyLand.png" %>
-          <% image_tag "/assets/art/GrenadiersExp.jpg" %>
-          <% image_tag "/assets/art/Kushano.jpg" %>
-          <% image_tag "/assets/art/OrisasStand1.png" %>
-          <% image_tag "/assets/art/ParticleCity.png" %>
-          <% image_tag "/assets/art/Ragnar.png" %>
-          <% image_tag "/assets/art/Wombat.jpg" %>
-          <% image_tag "/assets/art/ScaryMan.jpg" %>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="overlay full-page-child container">
-    <div class="row">
-      <div class="col-lg-4 mx-auto padder">
-        <br><br><br><br><br>
-        <h2>I do some art.</h2>
-        <p class="lead"><b>I've worked with Blender, Photoshop, DAZ, Maya, and watercolors.</b></p>
-        <button class ="btn btn-info" onclick="off()">Look at the pretty pictures!</button>
       </div>
     </div>
   </div>
