--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -16,7 +16,7 @@
         </p>
       </div>
       <div class="col-lg-8 col-sm-6 hidden-xs-down mx-auto">
-        <img src="http://lowboy.me/Pics/MeInPSOutline.png" class="homeareapic">
+        <img src="AidanOutline.png" class="homeareapic">
       </div>
     </div>
   </div>
@@ -63,7 +63,7 @@
           <div class="col-lg-6 col-md-4 mx-auto">
             <ul>
               <li><a href="http://www.ecappeal.org">Ethiopian Food Appeal</a></li>
-              <li><a href="http://www.dartmouthpolitics.com">Dartmouth Political Times</a></li> 
+              <li><a href="http://www.dartmouthpolitics.com">Dartmouth Political Times</a></li>
             </ul>
           </div>
         </div>
